--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
-before_install:
+install:
   - pwd
   - cd ..
+  - git clone https://github.com/peshkira/fits-blackbox-testing.git
   - git clone https://github.com/openplanets/fits.git
-  - cd fits
-  - ant release <<< "release"
+  - cd ../fits-output-testing-mocks
